# UnigineTask1

./: CMakeLists.txt  README.md  main.cpp
model/containers/: CellList.cpp  CellList.h
model/game/: Constants.h  GameInfo.cpp  GameInfo.h  Unit.cpp  Unit.h
model/math/: Utils.h  Vector2.cpp  Vector2.h
resources/: data1.txt  data_generator.py  data_out1.txt  data_small_1.txt  data_visualizer.py
tools/: data_generator.py  data_visualizer.py
view/: GameCalculation.cpp  GameCalculation.h  GameLoader.cpp  GameLoader.h  GameSaver.cpp  GameSaver.h
